<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        android:background="@drawable/backgroundcolor"
        tools:context=".LoginFragment">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_lock_open_black_24dp">

        </ImageView>

        <EditText
        android:id="@+id/Emailid"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:hint="@string/placeholder_email"
        android:textColorHint="#0B0B0B"
        android:textColor="#000407"
        android:background="@drawable/EditText_Background"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="368dp"
        android:hint="@string/placeholder_password"
        android:textColorHint="#0B0B0B"
        android:textColor="#000407"
        android:background="@drawable/EditText_Background"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:paddingLeft="15dp"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/MainLoginBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:textSize="25sp"
        android:textColorHint="#0B0B0B"
        android:textColor="#000407"
        android:background="@drawable/buttonbackground"
        android:text="Login"/>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:layout_centerHorizontal="true"
        android:text="@string/placeholder_register"
        android:textColorHint="#0B0B0B"
        android:textColor="#000407"
        android:background="@drawable/buttonbackground"/>


    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/Password"
        android:layout_marginTop="525dp"
        android:textColorHint="#0B0B0B"
        android:textColor="#000407"

        android:text="@string/forgot_Password"
 />

</RelativeLayout>